--- a/expe.tex
+++ b/expe.tex
@@ -89,15 +89,16 @@ provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 1
 \includegraphics[height=5cm]{img/microscope_TiO2_particles.pdf}
 \end{figure}
 
-Compared to most metamaterial designs, the fabrication of the dielectric spheres can be extremely simplified by the \textit{spray-drying} technique. In contrast with the expensive and time-consuming \textit{top-down} processes such as laser machining, litography or polishing, this is a typical \textit{bottom-up} process, where the particles are formed all within one procedure, though certain postprocessing is needed. 
-Rutile (TiO$_{2}$) was ground to a powder of sub-microscopic particles. 
-A suspension of these nanoparticles in ethanol was sprayed into flame. The average size of particles was determined by the solid concentration in the suspension, by feed rate and by gas flow. It immediately formed spherical droplets, which dried up and sintered in the hot air.  
-The resulting particles were annealed in a furnace to further solidify. The degree of recrystallization could be controlled by the temperature of the furnace from microscopic grains (at around 1200  $^{\circ}$C) to a sphere consisting of few crystalline domains, which were apparent in electron microscope (annealed at\footnote{Procedure details are from the personal communication with Dr. Patrick Mounaix and {Dr.} U-Chan Chung} 1300--1400 $^{\circ}$C). Note the temperatures used are still far below the melting temperature of rutile (i.e. 1800 $^{\circ}$C).
+Compared to most metamaterial designs, the fabrication of the dielectric spheres can be extremely simplified by the \textit{spray-drying} technique. In contrast with the expensive and time consuming \textit{top-down} processes such as laser machining, litography or polishing, this is a typical \textit{bottom-up} process, where the particles are formed all within one procedure, though certain postprocessing is needed. 
+As a first step, rutile (TiO$_{2}$) was ground to a sub-microscopic powder. A suspension of this powder in ethanol was sprayed into flame. It immediately formed spherical droplets, which dried up and sintered in the hot air. Rutile concentration in the suspension, feed rate and gas flow in the flame determine the average size of the sintered particles.
 
+The resulting particles were annealed in a furnace to further solidify. The degree of recrystallization could be controlled by the temperature of the furnace from 1200  $^{\circ}$C to 1400 $^{\circ}$C, from microscopic grains to a sphere consisting of few crystalline domains. The crystallisation was apparent in electron microscope. Note the temperatures used are still far below the melting temperature of rutile, which exceeds 1800 $^{\circ}$C.
 Similar TiO$_{2}$ microspheres are also available commercially (e.g. from Brace, GmbH), and to the author's knowledge, they were made with a similar process.
 
-Only the low-temperature annealed samples were measured by the terahertz spectroscopy in this thesis. The fine-grained rutile was assumed to be well approximated by an isotropic dielectric. The size of the constituent crystalline grains was estimated from the observation of one microsphere ground on a glass of a pollarisation microscope: unlike polycrystalline aggregates, small rutile monocrystals appear as coloured particles due to their inherent birefringence. Therefore, the size of crystalline grains were determined in the order of few micrometers.
-The annealed spheres were further processed with the aim to break or eliminate clusters, by means of light milling with agathe mortar, which was separated afterwards by ultrasound bath cleaning in ethanol. Pre-sieving was performed on commercial sieves with 100, 53, 50, 40 and 38 $\upmu$m size of the square hole. The milling-cleaning-sieving procedure was repeated 2-3 times.
+The annealed spheres were further treated with the aim to break or eliminate clusters, by means of light milling with agathe mortar, which was separated afterwards by ultrasound bath cleaning in ethanol. Pre-sieving was performed on commercial sieves with 100, 53, 50, 40 and 38 $\upmu$m size of the square hole. The procedure of milling, cleaning and sieving was repeated 2-3 times (personal communication with Dr. Patrick Mounaix and {Dr.} U-Chan Chung).
+
+Only the low-temperature annealed samples were measured by the terahertz spectroscopy in this thesis. The fine-grained rutile was assumed to represent a nearly isotropic dielectric. We estimated the size of the constituent crystalline grains by grinding one microsphere and observing it under a pollarisation microscope: unlike polycrystalline aggregates, small rutile monocrystals appear as coloured particles due to their inherent birefringence. Therefore, the size of crystalline grains were determined in the order of few micrometers.
+
 %\textit{
 %(\ldots) As the spheres have been sintered at high temperature, they have been separated from a platinum plate with a small soft paintbrush followed by a light milling with a agathe mortar. The goal was to separate the spheres that are welded to their neighbours due to the sintering step. All the spheres were treated in ultrasound bath using ethanol as a liquid phase. After natural drying, the sieving was performed. (\ldots) square (or rectangular) holes sieves were used. The meshes used were 106, 100, 53, 50, 40 and 38 micrometer. As a dry sieving step was performed, the particles were light milled again in order to try to break possible agglomerates which would not go through the mesh. This process was repeated 2-3 times and a final wet sieving with ethanol was performed in order to "wash" the spheres. No special measures were taken according to their shapes. (\ldots) } 
 % TODO
@@ -105,9 +106,9 @@ The annealed spheres were further processed with the aim to break or eliminate c
 
 %}}}
 \paragraph{Theory of anisotropic sieves}%{{{
-Triple sieving on commercial sieves, weaved from stainless steel wire, did not provide narrow enough size distribution, which is however essential for obtaining a narrow collective resonance peak of the sample. We therefore developed a more exact method for very fine sample sieving and characterisation. 
+Triple sieving on commercial sieves, weaved from stainless steel wire, did not provide narrow enough size distribution, which is however essential for obtaining a narrow resonance peak of the sample. We therefore developed a more exact method for very fine sample sieving and characterisation. 
 
-\begin{figure}[ht] \caption{Correspondence between the hole shape (above) and the set of ellipsoids that can pass through the hole (below), determined by their medium and minor axes. Somewhat surprisingly, the \textbf{(a)} square and \textbf{(b)} lozenge holes result in circular/elliptic set of passing particles, whereas the \textbf{(c)} circular and \textbf{(b)} elliptic holes result in the square/rectangular shape of such an region.\\
+\begin{figure}[ht] \caption{Correspondence between the hole shape (above) and the set of ellipsoids that can pass through the hole (below), determined by their medium and minor axes. Somewhat surprisingly, the \textbf{(a)} square and \textbf{(b)} lozenge holes result in circular/elliptic set of passing particles, whereas the \textbf{(c)} circular and \textbf{(d)} elliptic holes result in the square/rectangular shape of such an region.\\
 For clarity, some limiting-case examples of the ellipsoid projection and the equivalent position on the minor-major ellipse axis plot are drawn in blue, violet and red. } \label{fg_sieve_pass_notpass} \centering 
 \includegraphics[width=\textwidth]{img/technology/sieve_pass_notpass.pdf}
 \end{figure}
