--- a/t.tex
+++ b/t.tex
@@ -21,8 +21,8 @@
 
 
 %% DEBUGGING ONLY, comment out in production version:
-%\setcounter{tocdepth}{4} 
-%\setcounter{secnumdepth}{4} 
+\setcounter{tocdepth}{4} 
+\setcounter{secnumdepth}{4} 
 
 \addbibresource{fdphd.bib}
 
